--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
 	"description": "An FCC Backend Challenge",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "nodemon server.js"
 	},
 	"dependencies": {
+		"cors": "^2.8.0",
 		"express": "^4.12.4",
-		"cors": "^2.8.0"
+		"moment": "^2.29.1"
 	},
 	"engines": {
 		"node": "4.4.5"
@@ -23,5 +24,8 @@
 		"express",
 		"freecodecamp"
 	],
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"nodemon": "^2.0.6"
+	}
 }
